[gd_scene load_steps=3 format=3 uid="uid://cidm7efk50ak2"]

[ext_resource type="PackedScene" uid="uid://p3ktrmrjgd8g" path="res://scenes/prefabs/reflective_question_display.tscn" id="1_qy6jo"]
[ext_resource type="Script" uid="uid://bwjex6hyvq204" path="res://scenes/prefabs/reflective_activity.gd" id="1_xx15b"]

[node name="ReflectiveActivity" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xx15b")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Exit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2

[node name="ReflectiveQuestionDisplay" parent="VBoxContainer" instance=ExtResource("1_qy6jo")]
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
